# bench

./: .gitignore  Cargo.toml  README.md  build.rs  report.html  report.json  scenarios.json
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  editor.rs  main.rs  runner.rs  stats.rs  ui_assets.rs
src/report/: html.rs  json.rs  mod.rs  pdf.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  EditorApp.tsx  api.ts  global.d.ts  types.ts
ui/src/components/: GlobalConfig.tsx  RequestEditor.tsx  ScenarioEditor.tsx
ui/src/report/: ReportViewer.tsx  types.ts
