[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Statistics
hdrhistogram = "7"

# HTML report templating
tera = "1"

# PDF generation
printpdf = "0.7"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
anyhow = "1"
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true

